[package]
name = "throw"
# Remember to update html_root_url in src/lib.rs with each version.
version = "0.1.2-dev"
authors = ["David Ross <daboross@daboross.net>"]
description = "Efficiently add statically-calculated stack traces to errors."

documentation = "https://docs.rs/throw/"
repository = "https://github.com/daboross/rust-throw/"
readme = "README.md"

license = "MIT"
keywords = ["error"]
categories = ["rust-patterns"]

include = ["Cargo.toml", "src/**/*", "tests/**/*", "examples/**/*", "LICENSE", "README.md"]

[dev-dependencies]
regex = "0.2"
